# NativePluginBuilder

./: .gitignore  README.md
Assets/Example/: Demo.unity  MyPluginExample.cs
Assets/Hello/: Hello.asset
Assets/MyPlugin/: MyPlugin.asset  MyPlugin.cs
Assets/MyPlugin/Plugins/OSX/MyPlugin.bundle/Contents/: Info.plist
Assets/MyPlugin/Plugins/OSX/MyPlugin.bundle/Contents/MacOS/: MyPlugin
Assets/MyPlugin/Plugins/WebGL/: MyPlugin.bc  MyPluginJS.jslib
Assets/MyPlugin/Plugins/iOS/: libMyPlugin.bundle
Assets/NativePluginBuilder/Boilerplate~/: Plugin.cs
Assets/NativePluginBuilder/Boilerplate~/CMake/: CMakeLists.txt
Assets/NativePluginBuilder/Boilerplate~/NativeSource~/CMake/: CMakeLists.txt
Assets/NativePluginBuilder/Boilerplate~/NativeSource~/Graphics/: RenderAPI.cpp  RenderAPI.h  RenderAPI_D3D11.cpp  RenderAPI_Metal.mm
Assets/NativePluginBuilder/Boilerplate~/NativeSource~/Source/: Plugin.cpp
Assets/NativePluginBuilder/Boilerplate~/Plugins/WebGL/: PluginJS.jslib
Assets/NativePluginBuilder/Boilerplate~/Source/: Plugin.cpp
Assets/NativePluginBuilder/Editor/: Architecture.cs  BackgroundProcess.cs  BackgroundProcessManager.cs  BuildPlatform.cs  BuildType.cs  CMakeHelper.cs  EditorMainThread.cs  NativeBuildOptions.cs  NativePlugin.cs  NativePluginBuilder.cs  NativePluginSettings.cs  NativeVersionChecker.cs  SerializableDictionary.cs
Assets/NativePluginBuilder/Editor/Assets/: MyPlugin.asset
Assets/NativePluginBuilder/Editor/Builders/: AndroidBuilder.cs  IOSBuilder.cs  LinuxBuilder.cs  OSXBuilder.cs  PluginBuilderBase.cs  UWPBuilder.cs  WebGLBuilder.cs  WindowsBuilder.cs
Assets/Testing12/: Testing12.asset
Assets/UnityNativePluginBuilder/Boilerplate~/CMake/: CMakeLists.txt
Assets/UnityNativePluginBuilder/Boilerplate~/Graphics/: PlatformBase.h  RenderAPI_D3D12.cpp  RenderAPI_D3D9.cpp  RenderAPI_OpenGL2.cpp  RenderAPI_OpenGLCoreES.cpp
Assets/UnityNativePluginBuilder/Boilerplate~/UnityPluginAPI/: IUnityGraphics.h  IUnityRenderingExtensions.h  IUnityShaderCompilerAccess.h
Assets/UnityNativePluginBuilder/Editor/: CMake.cs  NativePlugin.cs  NativePluginSettings.cs  UnityNativePluginBuilder.cs
Assets/UnityNativePluginBuilder/Editor/Assets/: MyPlugin.asset
Assets/UnityNativePluginBuilder/Editor/Resources/: NativePluginSettings.asset
Boilerplate~/NativeSource~/CMake/: CMakeLists.txt
Editor/: Architecture.cs  BuildPlatform.cs  NativeBuildOptions.cs  NativePlugin.cs  NativePluginBuilder.cs  NativeVersionChecker.cs  SerializableDictionary.cs
Editor/Builders/: AndroidBuilder.cs  IOSBuilder.cs  LinuxBuilder.cs  OSXBuilder.cs  PluginBuilderBase.cs  TizenBuilder.cs  UWPBuilder.cs  WebGLBuilder.cs  WindowsBuilder.cs
Editor/CMake/: AddDefinitionsInstruction.cs  AddLibraryInstruction.cs  CMakeList.cs  CMakeListAndroid.cs  CMakeListIOS.cs  CMakeListOSX.cs  GeneralInstructions.cs  Generator.cs  GenericInstruction.cs  IncludeDirectoriesInstruction.cs  InstallInstruction.cs  Instruction.cs  MessageInstruction.cs  SetInstruction.cs  Types.cs  XcodeInstructions.cs
Editor/CMake/Instructions/: AddDefinitions.cs  AddLibrary.cs  Comment.cs  FindPackage.cs  GeneralInstructions.cs  GenericInstruction.cs  Include.cs  IncludeDirectories.cs  Install.cs  Instruction.cs  Message.cs  Set.cs  SetTargetProperties.cs  SwigAddLibrary.cs  SwigLinkLibraries.cs  TargetIncludeDirectories.cs  XcodeInstructions.cs
Editor/Swig/: SwigInterface.cs
NativePluginBuilder/Editor/: BackgroundProcess.cs  NativeBuildOptions.cs  NativePlugin.cs
NativePluginBuilder/Editor/Builders/: AndroidBuilder.cs
ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
Test~/MyPlugin/NativeSource~/CMake/: CMakeLists.txt
